Update ChangeMachineServiceImpl.java
Quito el deprecated new URL(address)